feat: chat name set and modify
