# docs/swagger.json
@@ -66,6 +66,38 @@
             }
         },
         "/chats/{chat_id}": {
+            "put": {
+                "tags": [
+                    "chat"
+                ],
+                "summary": "modify a chat",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "chat id",
+                        "name": "chat_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "json",
+                        "name": "json",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/apis.ChatModifyModel"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Chat"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "tags": [
                     "chat"
@@ -583,6 +615,15 @@
         }
     },
     "definitions": {
+        "apis.ChatModifyModel": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string",
+                    "minLength": 1
+                }
+            }
+        },
         "apis.LoginRequest": {
             "type": "object",
             "properties": {
@@ -710,6 +751,9 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "name": {
+                    "type": "string"
                 },
                 "records": {
                     "type": "array",
